--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,51 @@
 asn1crypto==0.24.0
+attrs==19.1.0
 backcall==0.1.0
-bcrypt==3.1.4
-bleach==3.0.2
-cffi==1.11.5
+bcrypt==3.1.7
+bleach==3.1.0
+cffi==1.12.3
 Click==7.0
-colorama==0.4.0
-cryptography==2.3.1
-decorator==4.3.0
-defusedxml==0.5.0
-entrypoints==0.2.3
-idna==2.7
-ipykernel==5.1.0
-ipython==7.1.1
+colorama==0.4.1
+cryptography==2.7
+decorator==4.4.0
+defusedxml==0.6.0
+entrypoints==0.3
+ipykernel==5.1.1
+ipython==7.6.0
 ipython-genutils==0.2.0
-ipywidgets==7.4.2
-jedi==0.13.1
-Jinja2==2.10
-jsonschema==2.6.0
-jupyter-client==5.2.3
-jupyter-core==4.4.0
-MarkupSafe==1.1.0
+ipywidgets==7.5.0
+jedi==0.14.0
+Jinja2==2.10.1
+jsonschema==3.0.1
+jupyter-client==5.2.4
+jupyter-core==4.5.0
+MarkupSafe==1.1.1
 mistune==0.8.4
-nbconvert==5.4.0
+nbconvert==5.5.0
 nbformat==4.4.0
-notebook==5.7.0
-numpy==1.15.4
-pandas==0.23.4
+notebook==5.7.8
+numpy==1.16.4
+pandas==0.24.2
 pandocfilters==1.4.2
-paramiko==2.4.2
-parso==0.3.1
+paramiko==2.6.0
+parso==0.5.0
 pickleshare==0.7.5
-prometheus-client==0.4.2
-prompt-toolkit==2.0.7
-pyasn1==0.4.4
+prometheus-client==0.7.1
+prompt-toolkit==2.0.9
 pycparser==2.19
-Pygments==2.2.0
+Pygments==2.4.2
 PyNaCl==1.3.0
-python-dateutil==2.7.5
-pytz==2018.7
-pywinpty==0.5.4
-pyzmq==17.1.2
+pyrsistent==0.15.2
+python-dateutil==2.8.0
+pytz==2019.1
+pywinpty==0.5.5
+pyzmq==18.0.2
 Send2Trash==1.5.0
-six==1.11.0
-terminado==0.8.1
+six==1.12.0
+terminado==0.8.2
 testpath==0.4.2
-tornado==5.1.1
+tornado==6.0.3
 traitlets==4.3.2
 wcwidth==0.1.7
 webencodings==0.5.1
-widgetsnbextension==3.4.2
+widgetsnbextension==3.5.0
