--- a/example/experiments/slurm_test_1/4.in
+++ b/example/experiments/slurm_test_1/4.in
@@ -1,2 +1,2 @@
-echo "{'': ['BB'], 'a': 1, 'b': 1, '|desc': '1 + 1', 'output': '$(dirname $0)/4.out'}" > $(dirname $0)/4.out
-python example_tool.py "BB" --a="1" --b="1" --output="$(dirname $0)/4.out" &> $(dirname $0)/4.log
+echo "{'': ['BB'], 'a': 1, 'b': 1, '|desc': '1 + 1'}" > $(dirname $0)/4.out
+python example_tool.py "BB" --a="1" --b="1" >> "$(dirname $0)/4.out" 2> "$(dirname $0)/4.log"
