--- a/example/experiments/slurm_test_1/7.in
+++ b/example/experiments/slurm_test_1/7.in
@@ -1,2 +1,2 @@
-echo "{'': ['CB'], 'a': 2, 'b': 1, '|desc': '2 + 1', 'output': '$(dirname $0)/7.out'}" > $(dirname $0)/7.out
-python example_tool.py "CB" --a="2" --b="1" --output="$(dirname $0)/7.out" &> $(dirname $0)/7.log
+echo "{'': ['CB'], 'a': 2, 'b': 1, '|desc': '2 + 1'}" > $(dirname $0)/7.out
+python example_tool.py "CB" --a="2" --b="1" >> "$(dirname $0)/7.out" 2> "$(dirname $0)/7.log"
