--- a/example/experiments/slurm_test_1/1.in
+++ b/example/experiments/slurm_test_1/1.in
@@ -1,2 +1,2 @@
 echo "{'': ['AB'], 'a': 0, 'b': 1, '|desc': '0 + 1'}" > $(dirname $0)/1.out
-python example_tool.py "AB" --a="0" --b="1" >> "$(dirname $0)/1.out" 2> "$(dirname $0)/1.log"
+python3 example_tool.py "AB" --a="0" --b="1" >> "$(dirname $0)/1.out" 2> "$(dirname $0)/1.log"
