--- a/example/experiments/slurm_test_1/2.in
+++ b/example/experiments/slurm_test_1/2.in
@@ -1,2 +1,2 @@
 echo "{'': ['AC'], 'a': 0, 'b': 2, '|desc': '0 + 2'}" > $(dirname $0)/2.out
-python example_tool.py "AC" --a="0" --b="2" >> "$(dirname $0)/2.out" 2> "$(dirname $0)/2.log"
+python3 example_tool.py "AC" --a="0" --b="2" >> "$(dirname $0)/2.out" 2> "$(dirname $0)/2.log"
