--- a/example/experiments/slurm_test_1/3.in
+++ b/example/experiments/slurm_test_1/3.in
@@ -1,2 +1,2 @@
 echo "{'': ['BA'], 'a': 1, 'b': 0, '|desc': '1 + 0'}" > $(dirname $0)/3.out
-python example_tool.py "BA" --a="1" --b="0" >> "$(dirname $0)/3.out" 2> "$(dirname $0)/3.log"
+python3 example_tool.py "BA" --a="1" --b="0" >> "$(dirname $0)/3.out" 2> "$(dirname $0)/3.log"
